<?xml version="1.0"?>
<package>
  <name>orunav_msgs</name>
  <version>0.4.0</version>
  <description>The orunav_msgs package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <maintainer email="federico.pecora@oru.se">Federico Pecora</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" />
    
  </export>
</package>
