<?xml version="1.0"?>
<package>
  <name>orunav_params</name>
  <version>0.4.0</version>
  <description>The orunav_params package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
